--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <p>This is a paragraph</p>
     <p>This is a paragraph two</p>
-    <
+    <p>Lorem ipsum dolor sit.</p>
+    <p>Dolorum ex fugit perspiciatis.</p>
+    <p>Quibusdam nam eos quis.</p>
 </body>
 </html>
