--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is a paragraph</p>
+    <p>This is a short paragraph</p>
     <p>This is a paragraph two</p>
     <p>Lorem ipsum dolor sit.</p>
     <p>Dolorum ex fugit perspiciatis.</p>
